[tool.poetry]
name = "theta"
version = "0.1.0"
description = ""
authors = ["htkg <howtokillgarry@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
watchfiles = "0.21.0"
python = "^3.12"
litestar = { extras = ["standard", "structlog", "redis"], version = "^2.10.0" }
jupyter = "^1.0.0"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
