[tool.poetry]
name = "theta"
version = "0.1.0"
description = ""
authors = ["htkg <howtokillgarry@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
watchfiles = "0.22.0"
python = "^3.12"
litestar = { extras = ["standard", "structlog", "redis"], version = "^2.10.0" }
jupyter = "^1.0.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
anyio = "^4.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
